The MAPS.ME.Designer tool for DRAPE 2.0

--- a/qt/res/resources.qrc
+++ b/qt/res/resources.qrc
@@ -18,6 +18,10 @@
         <file>point-start.png</file>
         <file>clear-route.png</file>
         <file>routing.png</file>
+        <file>run.png</file>
+        <file>bug.png</file>
+        <file>chart.png</file>
+        <file>test.png</file>
     </qresource>
     <qresource prefix="/ui">
         <file>logo.png</file>
