[designer tool] Added button for geom index regeneration and config in prefs

--- a/qt/res/resources.qrc
+++ b/qt/res/resources.qrc
@@ -22,6 +22,7 @@
         <file>bug.png</file>
         <file>chart.png</file>
         <file>test.png</file>
+        <file>geom.png</file>
     </qresource>
     <qresource prefix="/ui">
         <file>logo.png</file>
