--- a/iphone/Maps/Classes/CustomViews/MapViewControls/Search/TableView/MWMSearchTableViewController.xib
+++ b/iphone/Maps/Classes/CustomViews/MapViewControls/Search/TableView/MWMSearchTableViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MWMSearchTableViewController">
@@ -29,17 +29,17 @@
                     </connections>
                 </tableView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="25T-i3-eR5">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                    <rect key="frame" x="0.0" y="100" width="320" height="261"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_search_not_found" translatesAutoresizingMaskIntoConstraints="NO" id="Xva-2d-ze3" userLabel="image">
-                            <rect key="frame" x="60" y="30" width="200" height="178"/>
+                            <rect key="frame" x="80" y="30" width="160" height="160"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="178" id="Ax8-Si-59Z"/>
-                                <constraint firstAttribute="width" constant="200" id="wCn-CD-Osv"/>
+                                <constraint firstAttribute="height" constant="160" id="Ax8-Si-59Z"/>
+                                <constraint firstAttribute="width" constant="160" id="wCn-CD-Osv"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="VlC-Yr-hSX" userLabel="text">
-                            <rect key="frame" x="16" y="224" width="288" height="17"/>
+                            <rect key="frame" x="16" y="214" width="288" height="17"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -55,7 +55,8 @@
                         <constraint firstItem="VlC-Yr-hSX" firstAttribute="leading" secondItem="25T-i3-eR5" secondAttribute="leading" constant="16" id="gVn-UQ-GWx"/>
                         <constraint firstAttribute="centerX" secondItem="Xva-2d-ze3" secondAttribute="centerX" id="kIp-OL-QdQ"/>
                         <constraint firstAttribute="trailing" secondItem="VlC-Yr-hSX" secondAttribute="trailing" constant="16" id="lhj-9H-dPK"/>
-                        <constraint firstItem="VlC-Yr-hSX" firstAttribute="top" secondItem="Xva-2d-ze3" secondAttribute="bottom" constant="16" id="nfN-5p-03j"/>
+                        <constraint firstAttribute="bottom" secondItem="VlC-Yr-hSX" secondAttribute="bottom" constant="30" id="mMJ-3T-Iw3"/>
+                        <constraint firstItem="VlC-Yr-hSX" firstAttribute="top" secondItem="Xva-2d-ze3" secondAttribute="bottom" constant="24" id="nfN-5p-03j"/>
                         <constraint firstItem="Xva-2d-ze3" firstAttribute="top" secondItem="25T-i3-eR5" secondAttribute="top" constant="30" id="sK3-Ld-4Os"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -65,13 +66,14 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="25T-i3-eR5" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="5Tp-CI-W2N"/>
                 <constraint firstItem="oZD-Er-6fn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="9cU-AY-lQv"/>
                 <constraint firstAttribute="trailing" secondItem="oZD-Er-6fn" secondAttribute="trailing" id="DoP-hv-QXb"/>
+                <constraint firstItem="25T-i3-eR5" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="YNo-gL-UjA"/>
+                <constraint firstItem="25T-i3-eR5" firstAttribute="height" relation="lessThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="height" priority="750" id="Z2h-J3-85N"/>
                 <constraint firstAttribute="trailing" secondItem="25T-i3-eR5" secondAttribute="trailing" id="fRl-2H-zOe"/>
-                <constraint firstItem="25T-i3-eR5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hGV-2Z-ZbQ"/>
                 <constraint firstItem="oZD-Er-6fn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="iKy-dd-6Jt"/>
                 <constraint firstItem="25T-i3-eR5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="k08-wO-hIF"/>
-                <constraint firstAttribute="bottom" secondItem="25T-i3-eR5" secondAttribute="bottom" id="k7w-1s-tbD"/>
                 <constraint firstAttribute="bottom" secondItem="oZD-Er-6fn" secondAttribute="bottom" id="rgu-oY-7XC"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
