--- a/android/res/layout/routing_plan.xml
+++ b/android/res/layout/routing_plan.xml
@@ -24,14 +24,76 @@
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:elevation="0dp">
-      <ImageView
-        android:id="@+id/toggle"
-        android:layout_width="?attr/actionBarSize"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_gravity="end|center_horizontal"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:scaleType="center"
-        tools:src="@drawable/ic_down"/>
+
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/progress_frame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal"
+            tools:background="#80FF0000">
+
+          <com.mapswithme.maps.widget.WheelProgressView
+              android:id="@+id/progress_vehicle"
+              style="@style/MwmWidget.ProgressWheel.RoutingPlan"
+              tools:visibility="visible" />
+
+          <com.mapswithme.maps.widget.WheelProgressView
+              android:id="@+id/progress_pedestrian"
+              style="@style/MwmWidget.ProgressWheel.RoutingPlan"
+              tools:visibility="visible" />
+
+          <com.mapswithme.maps.widget.WheelProgressView
+              android:id="@+id/progress_bicycle"
+              style="@style/MwmWidget.ProgressWheel.RoutingPlan"
+              tools:visibility="visible" />
+        </LinearLayout>
+
+        <RadioGroup
+            android:id="@+id/route_type"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignLeft="@id/progress_frame"
+            android:layout_alignStart="@id/progress_frame"
+            android:orientation="horizontal">
+
+          <RadioButton
+              android:id="@+id/vehicle"
+              android:layout_width="@dimen/routing_selector_size"
+              android:layout_height="@dimen/routing_selector_size"
+              tools:button="@drawable/ic_drive"
+              tools:buttonTint="?colorAccent" />
+
+          <RadioButton
+              android:id="@+id/pedestrian"
+              android:layout_width="@dimen/routing_selector_size"
+              android:layout_height="@dimen/routing_selector_size"
+              tools:button="@drawable/ic_walk"
+              tools:buttonTint="?iconTintLight" />
+
+          <RadioButton
+              android:id="@+id/bicycle"
+              android:layout_width="@dimen/routing_selector_size"
+              android:layout_height="@dimen/routing_selector_size"
+              tools:button="@drawable/ic_bicycle"
+              tools:buttonTint="?iconTintLight" />
+        </RadioGroup>
+
+        <ImageView
+            android:id="@+id/toggle"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:scaleType="center"
+            tools:src="@drawable/ic_down" />
+      </RelativeLayout>
+
     </android.support.v7.widget.Toolbar>
   </FrameLayout>
 
