--- a/android/res/values/styles-text.xml
+++ b/android/res/values/styles-text.xml
@@ -53,6 +53,11 @@
     <item name="android:textColor">?android:textColorSecondary</item>
   </style>
 
+  <style name="MwmTextAppearance.Body3.Primary">
+    <item name="android:textSize">@dimen/text_size_body_3</item>
+    <item name="android:textColor">?android:textColorPrimary</item>
+  </style>
+
   <style name="MwmTextAppearance.Body3.Light">
     <item name="android:textColor">?android:textColorPrimaryInverse</item>
   </style>
@@ -149,6 +154,9 @@
   <style name="MwmTextAppearance.PlacePage.Accent">
     <item name="android:textColor">?colorAccent</item>
   </style>
+
+  <style name="MwmTextAppearance.PlacePage.Title"
+         parent="MwmTextAppearance.Body3"/>
 
   <style name="MwmTextAppearance.Editor">
   </style>
