--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -131,7 +131,7 @@
   <dimen name="editor_auth_btn_height">36dp</dimen>
   <dimen name="editor_margin_timetable_left">50dp</dimen>
 
-  <!-- Phone bottom panel -->
+  <!-- Altitude chart -->
   <dimen name="altitude_chart_container_padding_left">16dp</dimen>
   <dimen name="altitude_chart_margin_bottom">4dp</dimen>
   <dimen name="altitude_chart_margin_top">14dp</dimen>
