--- a/android/res/layout/routing_plan.xml
+++ b/android/res/layout/routing_plan.xml
@@ -2,6 +2,7 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/routing_plan_frame"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
@@ -22,6 +23,8 @@
       style="@style/MwmWidget.ToolbarStyle"
       android:theme="@style/MwmWidget.ToolbarTheme"
       android:layout_width="match_parent"
+      app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
       android:layout_height="?attr/actionBarSize"
       android:elevation="0dp">
 
@@ -29,11 +32,22 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="?homeAsUpIndicator"
+            android:scaleType="center"
+            tools:src="@drawable/ic_down" />
+
         <LinearLayout
             android:id="@+id/progress_frame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
             android:orientation="horizontal"
             tools:background="#80FF0000">
 
@@ -43,14 +57,15 @@
               tools:visibility="visible" />
 
           <com.mapswithme.maps.widget.WheelProgressView
-              android:id="@+id/progress_pedestrian"
+              android:id="@+id/progress_bicycle"
               style="@style/MwmWidget.ProgressWheel.RoutingPlan"
               tools:visibility="visible" />
 
           <com.mapswithme.maps.widget.WheelProgressView
-              android:id="@+id/progress_bicycle"
+              android:id="@+id/progress_pedestrian"
               style="@style/MwmWidget.ProgressWheel.RoutingPlan"
               tools:visibility="visible" />
+
         </LinearLayout>
 
         <RadioGroup
@@ -69,17 +84,17 @@
               tools:buttonTint="?colorAccent" />
 
           <RadioButton
-              android:id="@+id/pedestrian"
-              android:layout_width="@dimen/routing_selector_size"
-              android:layout_height="@dimen/routing_selector_size"
-              tools:button="@drawable/ic_walk"
-              tools:buttonTint="?iconTintLight" />
-
-          <RadioButton
               android:id="@+id/bicycle"
               android:layout_width="@dimen/routing_selector_size"
               android:layout_height="@dimen/routing_selector_size"
               tools:button="@drawable/ic_bicycle"
+              tools:buttonTint="?iconTintLight" />
+
+          <RadioButton
+              android:id="@+id/pedestrian"
+              android:layout_width="@dimen/routing_selector_size"
+              android:layout_height="@dimen/routing_selector_size"
+              tools:button="@drawable/ic_walk"
               tools:buttonTint="?iconTintLight" />
         </RadioGroup>
 
