[android] Added showing/hidding the altitude chart depending on route building status

--- a/android/res/layout/altitude_chart_panel.xml
+++ b/android/res/layout/altitude_chart_panel.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/altitude_chart_panel"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_weight="1"
