[android] Moved and aligned navigation buttons.

--- a/android/res/layout/layout_nav_bottom.xml
+++ b/android/res/layout/layout_nav_bottom.xml
@@ -11,7 +11,8 @@
   android:clickable="true"
   android:visibility="invisible"
   android:background="?menuBackgroundOpen"
-  tools:visibility="visible">
+  tools:visibility="visible"
+  tools:showIn="@layout/layout_nav">
 
   <FrameLayout
     android:id="@+id/line_frame"
