--- a/android/res/layout-land/layout_nav_search.xml
+++ b/android/res/layout-land/layout_nav_search.xml
@@ -5,14 +5,22 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:theme="?navButtonsTheme"
-  tools:background="@color/bg_primary">
+  android:layout_marginBottom="@dimen/nav_menu_height"
+  tools:background="@color/bg_primary"
+  tools:showIn="@layout/layout_nav">
+
+  <View
+    android:id="@+id/touch_interceptor"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="gone"/>
 
   <LinearLayout
     android:id="@+id/search_frame"
     android:layout_width="286dp"
     android:layout_height="56dp"
     android:layout_alignParentBottom="true"
-    android:layout_marginBottom="46dp"
+    android:layout_marginBottom="@dimen/margin_half_plus"
     android:background="?searchLayoutBackground"
     android:orientation="horizontal"
     android:padding="@dimen/margin_quarter"
@@ -56,7 +64,7 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
-    android:layout_marginBottom="42dp"
+    android:layout_marginBottom="@dimen/margin_half"
     android:background="?nav_background"
     android:src="@drawable/ic_menu_search"
     android:tint="@null"/>
