--- a/android/res/layout/layout_nav_search.xml
+++ b/android/res/layout/layout_nav_search.xml
@@ -5,16 +5,29 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:theme="?navButtonsTheme"
-  tools:background="@color/bg_primary">
+  tools:background="@color/bg_primary"
+  tools:showIn="@layout/layout_nav">
+
+  <Space
+    android:id="@id/anchor_center"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_centerInParent="true"/>
+
+  <View
+    android:id="@+id/touch_interceptor"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="gone"/>
 
   <RelativeLayout
     android:id="@+id/search_frame"
     android:layout_width="200dp"
     android:layout_height="200dp"
-    android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
-    android:layout_marginBottom="122dp"
+    android:layout_marginTop="-68dp"
+    android:layout_below="@id/anchor_center"
     android:layout_marginLeft="-70dp"
     android:layout_marginStart="-70dp"
     android:background="?searchLayoutBackground"
@@ -67,10 +80,9 @@
     style="@style/MwmWidget.SearchNavigationButton"
     android:layout_width="64dp"
     android:layout_height="64dp"
-    android:layout_alignParentBottom="true"
+    android:layout_below="@id/anchor_center"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
-    android:layout_marginBottom="190dp"
     android:background="?nav_background"
     android:src="@drawable/ic_menu_search"
     android:tint="@null"/>
