--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -44,11 +44,10 @@
   <style name="MwmWidget.ProgressWheel.RoutingPlan">
     <item name="android:layout_width">@dimen/routing_selector_wheel_size</item>
     <item name="android:layout_height">@dimen/routing_selector_wheel_size</item>
-    <item name="android:layout_margin">@dimen/routing_selector_wheel_margin</item>
     <item name="android:visibility">invisible</item>
     <item name="android:background">?selectableItemBackgroundBorderless</item>
     <item name="centerDrawable">@android:color/transparent</item>
-    <item name="wheelProgressColor">?routingButtonHint</item>
+    <item name="wheelProgressColor">?routingButtonPressedHint</item>
     <item name="wheelSecondaryColor">@android:color/transparent</item>
     <item name="wheelThickness">@dimen/margin_eighth</item>
   </style>
