--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -147,5 +147,6 @@
   <!-- Gallery-->
   <dimen name="placepage_hotel_gallery_height">100dp</dimen>
   <dimen name="placepage_hotel_gallery_width">150dp</dimen>
+  <dimen name="gallery_image_height">84dp</dimen>
 
 </resources>
