--- a/android/res/layout/start_button.xml
+++ b/android/res/layout/start_button.xml
@@ -2,11 +2,10 @@
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/start"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/start_button_width"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:text="@string/p2p_start"
     style="@style/MwmWidget.Button.Start"
-    android:padding="8dp"
     android:textAppearance="@style/MwmTextAppearance.Body1"
-    tools:showIn="@layout/menu_route_plan_line" />
+    tools:showIn="@layout/menu_route_plan_line"/>
