[android] added place page hotel rating layout

--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -153,4 +153,7 @@
   <dimen name="placepage_hotel_nearby_height">64dp</dimen>
   <dimen name="placepage_hotel_nearby_icon_size">24dp</dimen>
 
+  <!-- Rating-->
+  <dimen name="margin_placepage_rating">20dp</dimen>
+
 </resources>
